--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -168,21 +168,18 @@ outputs:
         - poetry-core >=1.0.0
         - pip
       run:
-        - python
-        - huggingface_hub >=0.24.6
-        - jinja2 >=3.1.4
-        - numpy >=1.25.0
-        - protobuf >=3.20.3,<5.0.0
+        - python >=3.9
+        # requirements/requirements-convert_legacy_llama.txt
+        - numpy ~=1.26.4
+        - sentencepiece >=0.1.98,<0.2.0
+        - transformers >=4.44.1
+        - protobuf >=4.21.0,<5.0.0
+        - pytorch >=2.0.0
         - pyyaml >=5.1
         - safetensors >=0.4.4
-        - sentencepiece >=0.1.98,<0.2.0
-        - sqlite >=3.45.3
-        - sympy >=1.13.2
-        - tk >=8.6.14
-        - tokenizers >=0.19.1
-        - pytorch >=2.0.0
-        - tqdm >=4.66.5
-        - transformers >=4.44.1
+        # examples/llava/requirements.txt
+        - pillow >=10.2.0,<10.3.0
+        - torchvision >=0.17.1
         - {{ pin_subpackage('gguf', exact=True) }}
 
     test:
