--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -168,15 +168,16 @@ outputs:
         - poetry-core >=1.0.0
         - pip
       run:
+        # This is an aggregate of requirements from multiple files in the llama.cpp-tools repo, see:
+        # https://github.com/ggerganov/llama.cpp/tree/master/requirements
         - python
         # requirements/requirements-convert_legacy_llama.txt
         - numpy ~=1.26.4
         - sentencepiece >=0.1.98,<0.2.0
         - transformers >=4.44.1
         - protobuf >=4.21.0,<5.0.0
+        # requirements/requirements-convert_hf_to_gguf.txt
         - pytorch >=2.2.1
-        - pyyaml >=5.1
-        - safetensors >=0.4.4
         # examples/llava/requirements.txt
         - pillow >=10.2.0,<10.3.0
         - torchvision >=0.17.1
