--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -93,6 +93,8 @@ outputs:
         - cmake
         - ninja-base
         - pkgconfig
+        - git  # [osx or unix or aarch64]
+        - m2-git  # [win]
         - patch  # [osx or (unix and blas_impl == "mkl") or aarch64]
         - m2-patch  # [win]
 
