temporarily remove other recipes

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -145,7 +145,7 @@ outputs:
         - cbouss
         - jnoller
 
-  - name: llama.cpp-tools
+  {# - name: llama.cpp-tools
     script: build-llama-cpp-tools.sh   # [not win]
     script: bld-llama-cpp-tools.bat  # [win]
     version: {{ version }}
@@ -265,7 +265,7 @@ outputs:
       recipe-maintainers:
         - sodre
         - cbouss
-        - jnoller
+        - jnoller #}
 
 about:
   home: https://github.com/ggerganov/llama.cpp
