Clean up meta.yaml, add fma skip to test on linux segfault

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -53,12 +53,12 @@ outputs:
       skip: true # [((gpu_variant or "").startswith('cuda') and (blas_impl != "cublas")) or (not (gpu_variant or "").startswith('cuda') and (blas_impl == "cublas"))]
       # Use a build number difference to ensure that the GPU
       # variant is slightly preferred by conda's solver
-      number: {{ build_number + 200 }}  # [(gpu_variant or "").startswith('cuda')]
+      number: {{ build_number + 200 }}  # [(gpu_variant or "").startswith('cuda') and (gpu_variant != "cuda-11")]
       number: {{ build_number + 100 }}  # [gpu_variant == "metal"]
       number: {{ build_number }}        # [gpu_variant == "none"]
       string: cuda{{ cuda_compiler_version | replace('.', '') }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [(gpu_variant or "").startswith('cuda')]
-      string: cpu_{{ blas_impl }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                              # [gpu_variant == "none"]
-      string: mps_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                             # [gpu_variant == "metal"]
+      string: cpu_{{ blas_impl }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                 # [gpu_variant == "none"]
+      string: mps_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                                 # [gpu_variant == "metal"]
       missing_dso_whitelist:                                                                         # [s390x or (gpu_variant or "").startswith('cuda')]
         - "**/libcuda.so*"                                                                           # [(gpu_variant or "").startswith('cuda')]
         - '$RPATH/ld64.so.1'  # [s390x]
