Revert to microarch logic and remove all cpu backends

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,3 +1,7 @@
+x86_64_opt:
+  - none
+  - v2                         # [(x86 or x86_64) and not osx]
+  - v3                         # [(x86 or x86_64) and not osx]
 blas_impl:
   - mkl                        # [(x86 or x86_64) and not osx]
   - openblas                   # [not win and not osx]
@@ -7,10 +11,12 @@ blas_impl:
 gpu_variant:
   - none
   - metal                      # [osx and arm64]
+  - cuda-11                    # [linux and x86_64]
   - cuda-12                    # [win or (linux and x86_64)]
 
 cuda_compiler_version:         # [win or (linux and x86_64)]
   - none                       # [win or (linux and x86_64)]
+  - 11.8                       # [(linux and x86_64)]
   - 12.4                       # [win or (linux and x86_64)]
 
 cuda_compiler:                 # [win or (linux and x86_64)]
