--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -58,12 +58,15 @@ outputs:
       number: {{ build_number + 250 }}  # [(gpu_variant or "").startswith('cuda') and (gpu_variant != "cuda-11") and (x86_64_opt == "v3")]
       number: {{ build_number + 240 }}  # [(gpu_variant or "").startswith('cuda') and (gpu_variant != "cuda-11") and (x86_64_opt == "v2")]
       number: {{ build_number + 200 }}  # [(gpu_variant or "").startswith('cuda') and (gpu_variant != "cuda-11") and (x86_64_opt == "none")]
+      number: {{ build_number + 160 }}  # [((gpu_variant == "cuda-11") and (x86_64_opt == "v4"))]
       number: {{ build_number + 150 }}  # [((gpu_variant == "cuda-11") and (x86_64_opt == "v3"))]
       number: {{ build_number + 140 }}  # [((gpu_variant == "cuda-11") and (x86_64_opt == "v2"))]
       number: {{ build_number + 100 }}  # [((gpu_variant == "cuda-11") and (x86_64_opt == "none")) or (gpu_variant == "metal")]
+      number: {{ build_number + 90 }}   # [gpu_variant == "none" and x86_64_opt == "v4"]
       number: {{ build_number + 50 }}   # [gpu_variant == "none" and x86_64_opt == "v3"]
       number: {{ build_number + 40 }}   # [gpu_variant == "none" and x86_64_opt == "v2"]
       number: {{ build_number }}        # [gpu_variant == "none" and x86_64_opt == "none"]
+      string: cuda{{ cuda_compiler_version | replace('.', '') }}_v4_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [(gpu_variant or "").startswith('cuda') and (x86_64_opt == "v4")]
       string: cuda{{ cuda_compiler_version | replace('.', '') }}_v3_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [(gpu_variant or "").startswith('cuda') and (x86_64_opt == "v3")]
       string: cuda{{ cuda_compiler_version | replace('.', '') }}_v2_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [(gpu_variant or "").startswith('cuda') and (x86_64_opt == "v2")]
       string: cuda{{ cuda_compiler_version | replace('.', '') }}_v1_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [(gpu_variant or "").startswith('cuda') and (x86_64_opt == "none")]
