--- a/abs.yaml
+++ b/abs.yaml
@@ -3,11 +3,10 @@ build_parameters:
   - "--suppress-variables"
   - "--skip-existing"
   - "--error-overlinking"
+  - "--error-overdepending"
   - "--variants \"{skip_cuda_prefect: True}\""
 
-channels:
-  - ai-staging
-
-# destination upon merge
-upload_channels:
-  - ai-staging
+# Required for glibc >= 2.28
+pkg_build_image_tag: main-rockylinux-8
+build_env_vars:
+  ANACONDA_ROCKET_GLIBC: "2.28"
