--- a/abs.yaml
+++ b/abs.yaml
@@ -3,8 +3,11 @@ build_parameters:
   - "--suppress-variables"
   - "--skip-existing"
   - "--error-overlinking"
-  - "--error-overdepending"
   - "--variants \"{skip_cuda_prefect: True}\""
+
+# Build on macOS Ventura
+extra_labels_for_os:
+  osx-arm64: [ventura]
 
 # Required for glibc >= 2.28
 pkg_build_image_tag: main-rockylinux-8
