--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "llama.cpp-meta" %}
-{% set upstream_release = "b5990" %}
-{% set upstream_commit = "e2b7621e7c265a6739225125cf9c534f471b3472" %}
+{% set upstream_release = "b6082" %}
+{% set upstream_commit = "5aa1105da24a8dd1661cea3db0582c9b2c2f54d3" %}
 {% set version = "0.0." + upstream_release[1:] %}
 {% set gguf_version = "0.17.1." + upstream_release[1:] %}
 {% set build_number = 0 %}
@@ -11,7 +11,7 @@ package:
 
 source:
   url: https://github.com/ggml-org/llama.cpp/archive/{{ upstream_release }}.tar.gz
-  sha256: ae12da6da2e781e9a316d10c75804934d3bbf20649c98da255bf1f2b6083af3b
+  sha256: f961d6a9525133991a0b86cce8e33671cac6b028d51f8d22ce2370b526f4c6c2
 
   patches:
     - patches/mkl.patch                     # [blas_impl == "mkl"]
@@ -138,6 +138,7 @@ outputs:
         # requirements/requirements-convert_hf_to_gguf.txt
         # requirements/requirements-convert_llama_ggml_to_gguf.txt
         # requirements/requirements-convert_lora_to_gguf.txt
+        - mistral-common >=1.8.3
         - pytorch >=2.2.1
         # temporary until pytorch gets constrained to the matching version of libtorch.
         # current pytorch only has gpu variants for linux-64 and osx-arm64.
